EXOJCR-986: Enable SecurityManager by default