@@ -39,6 +39,10 @@
       <artifactId>exo.kernel.commons</artifactId>
     </dependency>
     <dependency>
+       <groupId>org.exoplatform.kernel</groupId>
+       <artifactId>exo.kernel.commons.test</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.exoplatform.core</groupId>
       <artifactId>exo.core.component.security.core</artifactId>
     </dependency>
@@ -101,23 +105,59 @@
     </dependency>
   </dependencies>
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <excludes>
-              <exclude>**/TestUtils.java</exclude>
-              <exclude>**/OrderPatchTest.java</exclude>
-              <!-- Related issue: http://jira.exoplatform.org/browse/JCR-1149 -->
-              <exclude>**/TestEncoding.java</exclude>
-              <exclude>**/TestPropFindContent.java</exclude>
-              <exclude>**/TestPropPatchContent.java</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>${env.MAVEN_OPTS} -Djava.security.manager=org.exoplatform.commons.test.TestSecurityManager -Djava.security.policy=${project.build.directory}/test-classes/test.policy</argLine>
+          <excludes>
+            <exclude>**/TestUtils.java</exclude>
+            <exclude>**/OrderPatchTest.java</exclude>
+            <!-- Related issue: http://jira.exoplatform.org/browse/JCR-1149 -->
+            <exclude>**/TestEncoding.java</exclude>
+            <exclude>**/TestPropFindContent.java</exclude>
+            <exclude>**/TestPropPatchContent.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+         <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>prepare-test-policy</id>
+                  <phase>process-test-resources</phase>
+                  <configuration>
+                     <tasks>
+                        <echo>Creating Access Policy for tests</echo>
+                        <makeurl file="${settings.localRepository}" property="localRepositoryURL" />
+                        <makeurl file="${project.build.outputDirectory}" property="outputDirectoryURL" />
+                        <makeurl file="${project.build.testOutputDirectory}" property="testOutputDirectoryURL" />
+                        <copy todir="${project.build.testOutputDirectory}" overwrite="true">
+                           <fileset dir="${project.basedir}/src/test/resources/">
+                              <include name="test.policy" />
+                           </fileset>
+                           <filterset>
+                              <filter token="MAVEN_REPO" value="${localRepositoryURL}" />
+                              <filter token="MAIN_CLASSES" value="${outputDirectoryURL}" />
+                              <filter token="TEST_CLASSES" value="${testOutputDirectoryURL}" />
+                           </filterset>
+                        </copy>
+                     </tasks>                     
+                  </configuration>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <dependencies>
+               <dependency>
+                  <groupId>ant</groupId>
+                  <artifactId>ant-optional</artifactId>
+                  <version>1.5.3-1</version>
+               </dependency>
+            </dependencies>
+         </plugin>
+    </plugins>
   </build>
 </project>
